--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,40 @@ html {
     font-size: 62.5%;
 }
 
+a {
+    text-decoration: none;
+}
+
+/* VARIABLES */
+:root {
+    /* colors */
+    --bg-header: #2c3e50;
+    --bg-footer-top: #3a546d;
+    --bg-section: #1abc9c;
+
+}
+
 /* HEADER */
+
+header {
+    width: 100%;
+    height: 80px;
+    background-color:var(--bg-header) ;
+}
+
+header h3, .hamburger, .menu {
+    line-height: 80px;
+}
+
+.logo h3 {
+    font-size: 2rem;
+}
+
+.hamburger {
+    font-size: 2.5rem;
+    justify-content: flex-end;
+}
+
+.menu ul {
+    list-style-type: none;
+}
