--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ a {
     text-decoration: none;
 }
 
-.container-jumbo, .container-about {
+.container-jumbo, .container-about, .container-form {
     width: 80%;
     margin: 0 auto;
 }
@@ -121,6 +121,39 @@ header h3, .hamburger, .menu {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+/* Form section */
+
+form input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid lightgrey;
+}
+
+form textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 1px solid lightgrey;
+    border-radius: 4px;
+    font-size: 16px;
+    resize: none;
+}
+
+input[type=button] {
+    background-color: var(--bg-section);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
 }
