--- a/css/style.css
+++ b/css/style.css
@@ -129,15 +129,16 @@ header h3, .hamburger, .menu {
     width: 100%;
     background-color: var(--bg-section);
     padding-top: 3em;
-}
-
-#about h2 {
     color: white;
 }
 
-#about p {
+#about .btn {
+    border: 1px solid white;
+    font-size: 1.8rem;
+}
+
+#about .btn a {
     color: white;
-    font-size: 1.6rem;
 }
 
 /* button white */
