Added details of form contact section

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ a {
 
 }
 
+
 /* HEADER */
 
 header {
@@ -61,6 +62,7 @@ header h3, .hamburger, .menu {
     color: var(--bg-section);
 }
 
+
 /* Jumbotron section */
 
 #jumbotron {
@@ -96,6 +98,7 @@ header h3, .hamburger, .menu {
     color: white;
 }
 
+
 /* Portfolio section */
 
 #portfolio {
@@ -123,6 +126,7 @@ header h3, .hamburger, .menu {
     border-radius: 20px;
 }
 
+
 /* About section */
 
 #about {
@@ -132,28 +136,17 @@ header h3, .hamburger, .menu {
     color: white;
 }
 
+/* button white */
+
 #about .btn {
     border: 1px solid white;
-    font-size: 1.8rem;
+    font-size: 1.7rem;
 }
 
 #about .btn a {
     color: white;
 }
 
-/* button white */
-
-.button-white {
-    border: .5px solid white;
-    border-radius: 10px;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-}
 
 /* Form section */
 
@@ -161,35 +154,30 @@ header h3, .hamburger, .menu {
     padding-top: 3em;
 }
 
-form input[type=text] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 1px solid lightgrey;
+/* form-control */
+
+/* button-form */
+form .form-control {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0px;
+
 }
 
-form textarea {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 1px solid lightgrey;
-    border-radius: 4px;
-    font-size: 16px;
-    resize: none;
-}
-
-input[type=button] {
+form .btn {
     background-color: var(--bg-section);
+    font-size: 1.7rem;
     border: none;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: var(--bg-footer-top);
+}
+
+.form-floating>label,.form-label {
+    font-size: 1.5rem;
 }
 
 /* FOOTER */
@@ -222,7 +210,7 @@ input[type=button] {
     }
 }
 
-/* Small	sm	≥576px */
+/* Small    sm	≥576px */
 
 @media screen and (min-width:576px) {
     .footer-top .row {
@@ -233,6 +221,10 @@ input[type=button] {
 /* Medium	md	≥768px */
 
 @media screen and (min-width:768px) {
+    /* form section */
+    form.wrapper {
+        width: 100%;
+    }
     .footer-top .row {
         flex-direction: row;
     }
